services/media/audiobookshelf/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
spec:
  selector:
    app.kubernetes.io/instance: audiobookshelf
    app.kubernetes.io/name: audiobookshelf
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
