services/media/audiobookshelf/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
spec:
  parentRefs:
    - name: traefik-intranet
      namespace: traefik
  hostnames:
    - audiobookshelf.int.fivebytestudios.com
  rules:
    - backendRefs:
        - name: audiobookshelf
          port: 80
