services/media/audiobookshelf/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  annotations:
    cert-manager.io/cluster-issuer: intranet-dns01-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "from rules"
      secretName: "audiobookshelf-tls"
  rules:
    - host: "audiobookshelf.int.fivebytestudios.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  name: webui
